[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://levels/level7/Level.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=1]
metallic = 1.0

[node name="VaultOfSecrets" type="Node2D"]
script = ExtResource( 3 )

[node name="MoveLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="Ground" type="TileMap" parent="MoveLayer"]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 100, 100 )
collision_mask = 2
format = 1
tile_data = PoolIntArray( 131062, 3, 0, 131063, 3, 0, 131064, 3, 0, 131065, 3, 0, 131066, 3, 0, 131067, 3, 0, 131068, 3, 0, 131069, 3, 0, 131070, 3, 0, 131071, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0 )

[node name="ColorRect" type="ColorRect" parent="MoveLayer"]
margin_right = 1100.0
margin_bottom = 600.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="MoveLayer"]
position = Vector2( 500, 250 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )

[node name="Vault" type="CanvasLayer" parent="."]
layer = 128

[node name="Viewport" type="Viewport" parent="Vault"]
size = Vector2( 550, 300 )
own_world = true
audio_listener_enable_2d = true
audio_listener_enable_3d = true

[node name="Vault" type="Spatial" parent="Vault/Viewport"]

[node name="Camera" type="Camera" parent="Vault/Viewport/Vault"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0 )

[node name="DirectionalLight" type="DirectionalLight" parent="Vault/Viewport/Vault"]
transform = Transform( -1.62921e-07, 0.707107, -0.707107, 0, 0.707107, 0.707107, 1, 1.15202e-07, -1.15202e-07, 0, 10, 0 )

[node name="CSGBox" type="CSGBox" parent="Vault/Viewport/Vault"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )
width = 1.0
height = 1.0
depth = 1.0
material = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.001
one_shot = true
autostart = true

[node name="Audio" type="AudioStreamPlayer" parent="."]

[node name="MoveTween" type="Tween" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_tween_completed"]
